# reachy_mini_conversation_app

./: .env.example  README.md  pyproject.toml  tutorial.md
references/Blink-AI-dou/: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  pyproject.toml  tutorial.md
references/Blink-AI-dou/docs/: README.md  acceptance.md  appliance_intelligence_testing.md  architecture.md  body_expression_model.md  body_motion_tuning.md  character_presence_runtime.md  community_applications.md  companion_quickstart.md  current_direction.md  data_flywheel.md  development_guide.md  embodiment_runtime.md  hardware_grounded_expression_architecture.md  human_acceptance.md  investor_demo.md  investor_expressive_motion_v8_run_2026-04-11.md  investor_head_motion_v3_run_2026-04-11.md  investor_show_runbook.md  local_companion_certification_runbook.md  north_star.md  pre_hardware_solution.md  product_direction.md  protocol.md  relationship_runtime.md  robot_head_hardware_and_serial_handoff.md  robot_head_live_limits.md  robot_head_live_revalidation_2026-04-10.md  serial_head_hardware_connection_2026-04-07.md  serial_head_live_observation_sequence.md  serial_head_mac_runbook.md  stage6_operator_runbook.md  windows_fd_serial_reference.md
references/Blink-AI-dou/docs/codex_v1_range_demo_fix/: 01_root_cause_analysis.md  02_live_frame_scheduler_and_animation_visibility.md  03_opening_servo_range_demo_design.md  04_v1_show_rebuild_and_head_drop_removal.md  05_tests_acceptance_and_operator_validation.md  README.md
references/Blink-AI-dou/docs/evolution/: 2026-03-30_engineering_review.md  README.md
references/Blink-AI-dou/docs/expression/: EXPRESSIVE_UPGRADE_SUMMARY.md  expressive_behavior_system_v1.md
references/Blink-AI-dou/docs/mac_servo_lab/: 01_current_state_and_gap_analysis.md  02_target_product_scope_and_parity.md  03_backend_transport_and_api_plan.md  04_console_ui_and_cli_plan.md  05_motion_calibration_and_operator_rules.md  06_execution_sequence_and_acceptance.md  README.md
references/Blink-AI-dou/docs/plan1/: 00_acceptance_strategy.md  00_product_decision.md  01_acceptance_matrix.md  01_product_boundaries_and_non_goals.md  02_repo_recenter_plan.md  03_latency_and_model_strategy.md  04_docs_and_skills_rewrite_map.md  05_companion_core_feature_map.md  06_acceptance_gates.md  README.md  codex_prompt_01_rewrite_north_star_and_identity.md  codex_prompt_02_build_low_latency_hybrid_companion_runtime.md  codex_prompt_03_productize_terminal_first_companion.md  codex_prompt_04_build_relationship_runtime.md  codex_prompt_05_reclassify_robot_and_demo_layers.md
references/Blink-AI-dou/pilot_site/: README.md
references/Blink-AI-dou/pilot_site/demo_community_center/: community_calendar.ics  events.csv  faqs.yaml  (+4 more)
references/Blink-AI-dou/scripts/: README.md  serial_head_live_observation.sh
references/Blink-AI-dou/tests/: conftest.py  test_config.py  test_makefile_acceptance_targets.py  test_makefile_serial_targets.py  test_persistence.py
(+500 files in other folders)
